monkeys/apple-tree/kubernetes-resources/client.yaml
---
# Source: apple-tree/templates/client.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: apple-tree-client
spec:
  replicas: 
  serviceName: apple-tree-client
  selector:
    matchLabels:
      name: apple-tree-client
  template:
    metadata:
      labels:
        name: apple-tree-client
    spec:
      containers:
      - name: apple-tree
        image: docker.io/cilium/chaos-test-base:1.3
        imagePullPolicy: IfNotPresent
        command: [ "/test/run.sh" ]
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: run-script
          mountPath: /test
        - name: bpf-maps
          mountPath: /sys/fs/bpf
        - name: cilium-run
          mountPath: /var/run/cilium
        securityContext:
          capabilities:
            add:
              - "NET_ADMIN"
          privileged: true
      volumes:
      - name: run-script
        configMap:
          name: chaos-test-apple-tree-script
          defaultMode: 0777
      - name: bpf-maps
        hostPath:
          path: /sys/fs/bpf
      - name: cilium-run
        hostPath:
          path: /var/run/cilium
